plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.10'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.twojz'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework:spring-webflux'
	implementation 'io.projectreactor.netty:reactor-netty-http:1.2.8'
	implementation("io.netty:netty-resolver-dns-native-macos:4.1.100.Final:osx-aarch_64")
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	runtimeOnly 'com.mysql:mysql-connector-j'

	//형태소 분석
	implementation 'org.openkoreantext:open-korean-text:2.3.1'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.hibernate.validator:hibernate-validator:9.0.1.Final'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// fcm
	implementation 'com.google.firebase:firebase-admin:9.5.0'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'io.projectreactor:reactor-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.jar {
	enabled = false
}

tasks.bootJar {
	enabled = true
	mainClass = 'com.twojz.y_kit.YKitApplication'
}